--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "matplotlib>=3.9.2",
     "numpy>=2.1.1",
     "pandas>=2.2.2",
+    "cosmic-ray>=8.3.15",
 ]
 
 [build-system]
