--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,7 @@ dependencies = [
     "jinja2>=3.1.4",
     "click>=8.1.7",
     "pyyaml>=6.0.2",
-    "pytest>=8.3.3",
-    "ipykernel>=6.29.5",
     "coverage>=7.6.1",
-    "matplotlib>=3.9.2",
-    "numpy>=2.1.1",
-    "pandas>=2.2.2",
     "cosmic-ray>=8.3.15",
 ]
 
@@ -56,3 +51,13 @@ exclude = ["stuff"]
 reportMissingImports = "error"
 venvPath = "."
 venv = ".venv"
+
+[tool.uv]
+dev-dependencies = [
+    "pytest>=8.3.3",
+    "ipykernel>=6.29.5",
+    "matplotlib>=3.9.2",
+    "numpy>=2.1.1",
+    "pandas>=2.2.2",
+    "ipdb>=0.13.13",
+]
