--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pyyaml>=6.0.2",
     "coverage>=7.6.1",
     "cosmic-ray>=8.3.15",
+    "nbformat>=5.10.4",
 ]
 
 [build-system]
@@ -60,4 +61,6 @@ dev-dependencies = [
     "numpy>=2.1.1",
     "pandas>=2.2.2",
     "ipdb>=0.13.13",
+    "plotly>=5.24.1",
+    "pytest-cov>=5.0.0",
 ]
