--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
-.idea
 __pycache__
-/stuff
+/.idea
+/.zed
 /venv
 /.venv
-.zed
-.env
-.ruff_cache
+/.env
+/.ruff_cache
+/.coverage
+/stuff
 /todo*
-.coverage
-
