--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,11 @@
 [project]
 name = "guut"
-version = "0.2"
+version = "0.4"
 description = "Generate understandable unit tests"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "loguru>=0.7.2",
-    "openai>=1.45.0",
     "llama-cpp-python>=0.2.90",
     "jinja2>=3.1.4",
     "click>=8.1.7",
@@ -14,6 +13,7 @@ dependencies = [
     "coverage>=7.6.1",
     "cosmic-ray>=8.3.15",
     "nbformat>=5.10.4",
+    "openai>=1.51.2",
 ]
 
 [build-system]
@@ -64,3 +64,9 @@ dev-dependencies = [
     "plotly>=5.24.1",
     "pytest-cov>=5.0.0",
 ]
+
+[tool.setuptools]
+packages = ['guut']
+
+[tool.setuptools.package-data]
+"" = ['*.md']
