--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ dependencies = [
     "pyyaml>=6.0.2",
     "coverage>=7.6.1",
     "cosmic-ray>=8.3.15",
-    "nbformat>=5.10.4",
     "openai>=1.51.2",
 ]
 
@@ -63,6 +62,9 @@ dev-dependencies = [
     "ipdb>=0.13.13",
     "plotly>=5.24.1",
     "pytest-cov>=5.0.0",
+    "seaborn>=0.13.2",
+    "scipy>=1.15.0",
+    "nbformat>=5.10.4",
 ]
 
 [tool.setuptools]
