--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "guut"
-version = "0.4"
-description = "Generate understandable unit tests"
+version = "0.6"
+description = ""
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
